# itmo_sys_design

./: .pre-commit-config.yaml  README.md  app.py  pyproject.toml
.github/workflows/: lint.yml
docs/: ml_system_design_doc.md
modules/: __init__.py  inference.py  io_utils.py  llm.py  prompt.py  schema.py
notebooks/: EDA.ipynb  baseline_and_MVP_models.ipynb
