[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
extend-exclude = ["notebooks", "data"]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
allow_redefinition = true
exclude = "notebooks"

[tool.isort]
profile = "black"
line_length = 100
[project]
name = "itmo-sys-design"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan",email = "ivannabsid@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.5,<0.15.0)",
    "black (>=25.11.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)"
]
